<?xml version="1.0"?>
<package>
  <name>safe_drive</name>
  <version>0.0.0</version>
  <description>The safe_drive package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="pawel@todo.todo">pawel</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>ecl_threads</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>ecl_threads</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
